--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,7 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
+    "target": "ES2017",
     "paths": {
       "@/*": [
         "./*"
